--- a/.github/workflows/sync-to-notion.yml
+++ b/.github/workflows/sync-to-notion.yml
@@ -2,7 +2,7 @@ name: Sync to Notion
 
 on:
   schedule:
-    - cron: '5 * * * *'  # Runs at midnight every day
+    - cron: '*/5 * * * *'  # Runs at midnight every day
 
 jobs:
   sync:
