--- a/.github/workflows/sync-to-notion.yml
+++ b/.github/workflows/sync-to-notion.yml
@@ -1,29 +1,31 @@
-name: Sync to Notion
+name: Sync GitHub Data to Notion
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Runs at midnight every day
+    - cron: '*/5 * * *' # Runs daily at midnight UTC
+  workflow_dispatch: # Allows manual triggering
 
 jobs:
   sync:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install PyGithub requests
 
-      - name: Sync GitHub data to Notion
-        env:
-          NOTION_API_TOKEN: ${{ secret_TnaDfufN1h09vCjl4qeLP7Je3qgugiwJXggKhtdKe1E }}
-          NOTION_DATABASE_ID: 1cbdcc7a064e4674bd2943e1e0ac6019
-        run: |
-          python sync_to_notion.py
+    - name: Run sync script
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
+        NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
+      run: python sync_github_to_notion.py
