--- a/.github/workflows/sync-to-notion.yml
+++ b/.github/workflows/sync-to-notion.yml
@@ -2,7 +2,7 @@ name: Sync GitHub Data to Notion
 
 on:
   schedule:
-    - cron: '*/5 * * *' # Runs daily at midnight UTC
+    - cron: '*/5 * * *' # Runs daily at midnight UTC.
   workflow_dispatch: # Allows manual triggering
 
 jobs:
